--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -106,12 +106,111 @@
    "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-01T05:43:57.874497Z",
+     "start_time": "2024-12-01T05:32:04.053347Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "from sktime.classification.interval_based import TimeSeriesForestClassifier\n",
+    "from sktime.datatypes._panel._convert import from_2d_array_to_nested\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load data\n",
+    "train_data = pd.read_csv('data/exoTrain.csv')\n",
+    "test_data = pd.read_csv('data/exoTest.csv')\n",
+    "\n",
+    "# Extract features and labels\n",
+    "x_train = train_data.iloc[:, 1:]\n",
+    "y_train = train_data.iloc[:, 0]\n",
+    "x_test = test_data.iloc[:, 1:]\n",
+    "y_test = test_data.iloc[:, 0]\n",
+    "\n",
+    "# Convert feature data to nested format\n",
+    "x_train_nested = from_2d_array_to_nested(x_train)\n",
+    "x_test_nested = from_2d_array_to_nested(x_test)\n",
+    "\n",
+    "# Train classifier\n",
+    "clf = TimeSeriesForestClassifier(random_state=42)\n",
+    "clf.fit(x_train_nested, y_train)\n",
+    "\n",
+    "# Predict and calculate accuracy\n",
+    "y_pred = clf.predict(x_test_nested)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy}\")\n"
+   ],
+   "id": "ce19965b2b8b3cc7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9912280701754386\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-01T05:56:17.781882Z",
+     "start_time": "2024-12-01T05:56:17.769097Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "\n",
+    "\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=1))\n",
+    "\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
+   ],
+   "id": "9cf63b89098df9c4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.99      1.00      1.00       565\n",
+      "           2       1.00      0.00      0.00         5\n",
+      "\n",
+      "    accuracy                           0.99       570\n",
+      "   macro avg       1.00      0.50      0.50       570\n",
+      "weighted avg       0.99      0.99      0.99       570\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[565   0]\n",
+      " [  5   0]]\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-01T05:57:59.462513Z",
+     "start_time": "2024-12-01T05:57:59.459171Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "id": "3855d9c7b1bc7400",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ce19965b2b8b3cc7"
+   "execution_count": 15
   }
  ],
  "metadata": {
