--- a/tk_test.ipynb
+++ b/tk_test.ipynb
@@ -76,8 +76,8 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "import warnings\n",
     "\n",
+    "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Load data\n",
@@ -90,7 +90,7 @@
     "X_test = test_data.iloc[:, 1:]\n",
     "y_test = test_data.iloc[:, 0]\n",
     "\n",
-    "# Map labels to binary: 1 → 0, 2 → 1\n",
+    "# Remap labels: 1 → 0, 2 → 1\n",
     "y_train = y_train.map({1: 0, 2: 1})\n",
     "y_test = y_test.map({1: 0, 2: 1})\n",
     "\n",
@@ -99,7 +99,7 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# Balance dataset using SMOTE\n",
+    "# Balance dataset\n",
     "smote = SMOTE(random_state=42)\n",
     "X_train_resampled, y_train_resampled = smote.fit_resample(X_train_scaled, y_train)\n",
     "\n",
@@ -107,20 +107,20 @@
     "model = RandomForestClassifier(random_state=42, class_weight='balanced')\n",
     "model.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
-    "# Predict probabilities\n",
+    "# Predict probs\n",
     "y_probs = model.predict_proba(X_test_scaled)[:, 1]\n",
     "\n",
     "# Evaluate thresholds\n",
     "metrics = evaluate_thresholds(y_test, y_probs)\n",
     "\n",
-    "# Find the optimal threshold (e.g., for F1 score)\n",
+    "# Optimal threshold (F1 score)\n",
     "optimal_threshold = find_optimal_threshold(metrics, metric=\"f1\")\n",
     "print(f\"Optimal Threshold (F1): {optimal_threshold}\")\n",
     "\n",
-    "# Plot metrics for better understanding\n",
+    "# Plot metrics\n",
     "plot_metrics(metrics)\n",
     "\n",
-    "# Apply the optimal threshold\n",
+    "# Apply optimal threshold\n",
     "y_pred = (y_probs >= optimal_threshold).astype(int)\n",
     "\n",
     "# Evaluate\n",
